# MIND

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LAYERS.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
articles/: cognitive_coevolution.md
core/src/: cr_runtime.c  cr_state.c  cr_temporal.c
core/tests/: .gitkeep
docs/: S2S_PROTOCOL.md  index.html
docs/architecture/: API.md  ARCHITECTURE.md
docs/site/: docs.html
docs/spec/: .gitkeep
examples/: minimal.c
foundation/include/: mind_vec.h
foundation/src/: mind_vec.c
foundation/tests/: .gitkeep
include/: cr.h
site/: index.html  principles.html  spec.html
src/: cr_internal.h  cr_persist.c  cr_query.c  cr_state.c
tests/: test_basic.c
